--- a/app/src/main/res/layout/activity_exam_controller_dashoard.xml
+++ b/app/src/main/res/layout/activity_exam_controller_dashoard.xml
@@ -187,6 +187,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                android:layout_weight="1"
+                android:id="@+id/cv_students"
                 android:layout_margin="12dp"
                 app:cardCornerRadius="12dp"
                 app:cardElevation="6dp">
@@ -195,7 +196,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_gravity="center"
-                    android:gravity="center"                    android:orientation="vertical"
+                    android:gravity="center"
+                    android:orientation="vertical"
                     android:padding="16dp">
                     <ImageView
                         android:layout_gravity="center"
